+lk but checkbox is bad :(

--- a/app/feedback.html
+++ b/app/feedback.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="1230, initial-scale=1">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Обратная связь</title>	
 	<meta name="description" content="Здесь можно отправить мне свой проект">
 	<meta name="keywords" content="Frontend разработчик">
@@ -106,9 +106,11 @@
 </div>
 <footer class="footer clearfix">
 	<div class="footer_container">
-		<div class="icon enter">
-			<a href="#" class="enter_text" alt="">Вход</a>
-		</div>
+		<a href="lk.html" alt="">
+			<div class="icon enter">
+				<span class="enter_text">Вход</span>
+			</div>
+		</a>
 		<div class="footer_text">© 2016. Это мой сайт, пожалуйста, не копируйте и не воруйте его!
 		</div>
 	</div>
