--- a/app/index2.html
+++ b/app/index2.html
@@ -10,7 +10,7 @@
 
 	<link rel="stylesheet" href="bower_components/normalize-css/normalize.css">
 	<link rel="stylesheet" href="css/stylesheet.css">
-	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="css/adaptiv.css">
 	<link rel="icon" type="image/x-icon" href="images/icon.ico">
 	<script src="js/venfor/modernizr.js"></script>
 	 <!--[if IE]>
@@ -158,11 +158,9 @@
 </div>
 <footer class="footer clearfix">
 	<div class="footer_container">
-		<a href="lk.html" alt="">
-			<div class="icon enter">
-				<span class="enter_text">Вход</span>
-			</div>
-		</a>
+		<div class="icon enter">
+			<a href="#" class="enter_text" alt="">Вход</a>
+		</div>
 		<div class="footer_text">© 2016. Это мой сайт, пожалуйста, не копируйте и не воруйте его!
 		</div>
 	</div>
