modernizr + placeholder in ie8, h1 and h2, full alt

--- a/app/index.html
+++ b/app/index.html
@@ -3,16 +3,14 @@
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="viewport" content="width=1205">
 	<title>Обо мне</title>	
 	<meta name="description" content="Эта страница обо мне">
 	<meta name="keywords" content="Frontend разработчик">
-
-	<link rel="stylesheet" href="bower_components/normalize-css/normalize.css">
 	<link rel="stylesheet" href="css/stylesheet.css">
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="icon" type="image/x-icon" href="images/icon.ico">
-	<script src="js/venfor/modernizr.js"></script>
+	<script src="bower_components/modernizr/modernizr.js"></script>
 	 <!--[if IE]>
     <link rel="stylesheet" href="css/forie.css">
     <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -34,22 +32,22 @@
 			</a>
 			<ul class="socials clearfix">
 				<li class="socials_item">
-					<a href="https://www.facebook.com/allarepossible" class="icon icon_fb" alt="" target="_blank">
+					<a href="https://www.facebook.com/allarepossible" class="icon icon_fb" alt="facebook" target="_blank">
 						facebook
 					</a>
 				</li>			
 				<li class="socials_item">
-					<a href="http://vk.com/id121191631" class="icon icon_vk" alt="" target="_blank">
+					<a href="http://vk.com/id121191631" class="icon icon_vk" alt="vkontakte" target="_blank">
 						vkontakte
 					</a>
 				</li>
 				<li class="socials_item">
-					<a href="#" class="icon icon_tw" alt="" target="_blank">
+					<a href="#" class="icon icon_tw" alt="twitter" target="_blank">
 						twitter
 					</a>
 				</li>
 				<li class="socials_item">
-					<a href="https://github.com/Allarepossible" class="icon icon_git" alt="" target="_blank">
+					<a href="https://github.com/Allarepossible" class="icon icon_git" alt="github" target="_blank">
 						github
 					</a>
 				</li>
@@ -76,11 +74,11 @@
 		</aside>
 		<div class="content_area clearfix">
 			<section class="information clearfix">
-				<div class="mainLine">Основная информация</div>
+				<div class="mainLine"><h1>Основная информация</h1></div>
 				<div class="main_information">
 					<div class="photo">
 						<div class="inner_photo">
-							<img src="images/photo.png">
+							<img src="images/photo.png" alt="Гильфанова Лейсан">
 						</div>
 					</div>
 					<div class="info">
@@ -103,7 +101,7 @@
 				</div>
 			</section>
 			<section class="information clearfix">	
-				<div class="mainLine pad clearfix">Опыт работы</div>	
+				<div class="mainLine pad clearfix"><h2>Опыт работы</h2></div>	
 				<div class="Education">
 					<ul>
 						<li class="org icon">
@@ -128,7 +126,7 @@
 				</div>
 			</section>
 			<section class="information  clearfix">	
-				<div class="mainLine  clearfix">Образование</div>
+				<div class="mainLine  clearfix"><h2>Образование</h2></div>
 				<div class="Education">	
 					<ul>
 						<li class="org icon">
@@ -158,7 +156,7 @@
 </div>
 <footer class="footer clearfix">
 	<div class="footer_container">
-		<a href="lk.html" alt="">
+		<a href="lk.html">
 			<div class="icon enter">
 				<span class="enter_text">Вход</span>
 			</div>
