--- a/app/index2.html
+++ b/app/index2.html
@@ -7,7 +7,6 @@
 	<title>Обо мне</title>	
 	<meta name="description" content="Эта страница обо мне">
 	<meta name="keywords" content="Frontend разработчик">
-
 	<link rel="stylesheet" href="bower_components/normalize-css/normalize.css">
 	<link rel="stylesheet" href="css/stylesheet.css">
 	<link rel="stylesheet" href="css/adaptiv.css">
@@ -24,136 +23,13 @@
 Пожалуйста<a href="http://browsehappy.com/">обновите</a> его.</p>
  <![endif]-->
 <div class="wrapper">
-	<header class="header clearfix">
-		<div class="header_container">
-			<a href="index.html" class="logo">
-				<img class="logo_img" src="images/logo.png" alt="lgweb">
-				<span class="logo_text">
-					Leisan Gilfanova начинающий front-end разработчик.
-				</span>
-			</a>
-			<ul class="socials clearfix">
-				<li class="socials_item">
-					<a href="https://www.facebook.com/allarepossible" class="icon icon_fb" alt="" target="_blank">
-						facebook
-					</a>
-				</li>			
-				<li class="socials_item">
-					<a href="http://vk.com/id121191631" class="icon icon_vk" alt="" target="_blank">
-						vkontakte
-					</a>
-				</li>
-				<li class="socials_item">
-					<a href="#" class="icon icon_tw" alt="" target="_blank">
-						twitter
-					</a>
-				</li>
-				<li class="socials_item">
-					<a href="https://github.com/Allarepossible" class="icon icon_git" alt="" target="_blank">
-						github
-					</a>
-				</li>
-			</ul>
-		</div>
-	</header>
-	<main class="content clearfix">
-		<aside class="sidebar clearfix">
-			<nav class="nav clearfix">
-				<ul>
-					<li class="navigation active"><a href="/index.html">Обо мне</a></li>
-					<li class="navigation"><a href="/my_work.html">Мои Работы</a></li>
-					<li class="navigation"><a href="/feedback.html">Обратная связь</a></li>
-				</ul>
-			</nav>
-			<div class="contacts clearfix">
-				<div class="contacts_title">Контакты</div>
-				<ul class="contacts_list">
-					<li><a href="mailto:lisynok@list.ru" class="gmail_cont icon">lisynok@list.ru</a></li>
-					<li><a href="tel:+79168141051" class="tel_cont icon">+7 (916) 814-10-51</a></li>
-					<li><a href="skype:lisynok_93" class="skype_cont icon">Lisynok_93</a></li>
-				</ul>
-			</div>
-		</aside>
-		<div class="content_area clearfix">
-			<section class="information clearfix">
-				<div class="mainLine">Основная информация</div>
-				<div class="main_information">
-					<div class="photo">
-						<div class="inner_photo">
-							<img src="images/photo.png">
-						</div>
-					</div>
-					<div class="info">
-						<p><span class="bold">Меня зовут:</span> Гильфанова Лейсан</p>
-						<p><span class="bold">Мой возраст:</span> 22 года</p>
-						<p><span class="bold">Мой город:</span> Москва, Россия</span></p>
-						<p><span class="bold">Моя специализация:</span> FRONTEND разработчик</span></p>
-						<div class="navyki">Ключевые навыки:</div>
-						<ul class="skills">
-							<li class="skill icon">Html</li>						
-							<li class="skill icon">Css</li>
-							<li class="skill icon">Javascript</li>
-							<li class="skill icon">Git</li>
-							<li class="skill icon">Gulp</li>							
-							<li class="skill icon">Php</li>
-							<li class="skill icon">Angular</li>
-							<li class="skill icon">Xml</li>
-						</ul>							
-					</div>
-				</div>
-			</section>
-			<section class="information clearfix">	
-				<div class="mainLine pad clearfix">Опыт работы</div>	
-				<div class="Education">
-					<ul>
-						<li class="org icon">
-						<i class="icon icon_work"></i>
-							<div class="work">
-								<span class="bold">Торговый дом "Ledrus" - контент менеджер</span><span class="Data">Ноябрь 2014 - настоящее время</span>
-							</div>
-						</li>
-						<li class="org icon">
-						<i class="icon icon_work"></i>
-							<div class="work">
-								<span class="bold">"amoCRM" - project менеджер</span><span class="Data"> Июнь 2015 - Ноябрь 2015</span>
-							</div>
-						</li>
-						<li class="org icon">
-						<i class="icon icon_work"></i>
-							<div class="work">		
-								<span class="bold">Веб-студия "Diaweb" - помощник дизайнера</span><span class="Data"> Январь 2016 - настроящее время</span>
-							</div>
-						</li>
-					</ul>
-				</div>
-			</section>
-			<section class="information  clearfix">	
-				<div class="mainLine  clearfix">Образование</div>
-				<div class="Education">	
-					<ul>
-						<li class="org icon">
-						<i class="icon icon_school"></i>
-							<div class="work">
-								<span class="bold">Полное среднее. Средняя общеобразовательная школа.</span><span class="Data">2000 - 2011</span>
-							</div>
-						</li>
-						<li class="org icon">
-						<i class="icon icon_vus"></i>
-							<div class="work">	
-								<span class="bold">МГУ им. М. В. Ломоносова - физический факультет</span><span class="Data"> Сентябрь 2011 - по настоящее время</span>
-							</div>
-						</li>
-						<li class="org icon">
-						<i class="icon icon_course"></i>
-							<div class="work">
-								<span class="bold">Курсы Loftschool.ru</span><span class="Data"> Январь 2016 - по настоящее время</span>
-							</div>
-						</li>
-					</ul>
-				</div>
-			</section>			
-		</div>
-	</main>
+	<div class="arrow_box">Работа  пневмонагнетателя</div>
+	<div class="arrow_box">Выкладка  пленки</div>
+	<div class="arrow_box">Выставление  маяков</div>
+	<div class="arrow_box">Выравнивание  стяжки</div>
+	<div class="arrow_box">Финишная  затирка
+	.</div>
+	
 	<div class="empty"></div>
 </div>
 <footer class="footer clearfix">
