--- a/app/lk.html
+++ b/app/lk.html
@@ -3,17 +3,15 @@
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="viewport" content="width=1205">
 	<title>Обо мне</title>	
 	<meta name="description" content="Личный кабинет">
 	<meta name="keywords" content="Frontend разработчик">
-
-	<link rel="stylesheet" href="bower_components/normalize-css/normalize.css">
 	<link rel="stylesheet" href="css/stylesheet.css">
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="css/lk.css">
 	<link rel="icon" type="image/x-icon" href="images/icon.ico">
-	<script src="js/venfor/modernizr.js"></script>
+	<script src="../bower_components/modernizr/modernizr.js"></script>
 	 <!--[if IE]>
     <link rel="stylesheet" href="css/forie.css">
     <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -51,7 +49,7 @@
 </div>
 <footer class="footer clearfix">
 	<div class="footer_container">
-		<a href="lk.html" alt="">
+		<a href="lk.html">
 			<div class="icon enter">
 				<span class="enter_text">Вход</span>
 			</div>
