--- a/app/feedback.html
+++ b/app/feedback.html
@@ -3,18 +3,15 @@
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="viewport" content="width=1205">
 	<title>Обратная связь</title>	
 	<meta name="description" content="Здесь можно отправить мне свой проект">
 	<meta name="keywords" content="Frontend разработчик">
-
-	<link rel="stylesheet" href="bower_components/normalize-css/normalize.css">
 	<link rel="stylesheet" href="css/stylesheet.css">
 	<link rel="stylesheet" href="css/style.css">	
 	<link rel="stylesheet" href="css/feedback.css">	
 	<link rel="icon" type="image/x-icon" href="images/icon.ico">
-
-	<script src="js/venfor/modernizr.js"></script>
+	<script src="bower_components/modernizr/modernizr.js"></script>
 	 <!--[if IE]>
     <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <link rel="stylesheet" href="css/forie.css">
@@ -36,22 +33,22 @@
 			</a>
 			<ul class="socials clearfix">
 				<li class="socials_item">
-					<a href="https://www.facebook.com/allarepossible" class="icon icon_fb" alt="" target="_blank">
+					<a href="https://www.facebook.com/allarepossible" class="icon icon_fb" alt="facebook" target="_blank">
 						facebook
 					</a>
 				</li>			
 				<li class="socials_item">
-					<a href="http://vk.com/id121191631" class="icon icon_vk" alt="" target="_blank">
+					<a href="http://vk.com/id121191631" class="icon icon_vk" alt="vkontakte" target="_blank">
 						vkontakte
 					</a>
 				</li>
 				<li class="socials_item">
-					<a href="#" class="icon icon_tw" alt="" target="_blank">
+					<a href="#" class="icon icon_tw" alt="twitter" target="_blank">
 						twitter
 					</a>
 				</li>
 				<li class="socials_item">
-					<a href="https://github.com/Allarepossible" class="icon icon_git" alt="" target="_blank">
+					<a href="https://github.com/Allarepossible" class="icon icon_git" alt="github" target="_blank">
 						github
 					</a>
 				</li>
@@ -77,8 +74,8 @@
 			</div>
 		</aside>
 		<div class="content_area clearfix">
-			<section class="information">
-				<div class="mainLine  clearfix">У вас интересный проект? Напишите мне</div>
+			<section class="information clearfix">
+				<div class="mainLine"><h1>У вас интересный проект? Напишите мне</h1></div>
 				<div class="contact_form">
 					<form action="#" method="get" class="form">
 						<div class="inputs left"><label for="input_name">Имя</label>
@@ -106,7 +103,7 @@
 </div>
 <footer class="footer clearfix">
 	<div class="footer_container">
-		<a href="lk.html" alt="">
+		<a href="lk.html">
 			<div class="icon enter">
 				<span class="enter_text">Вход</span>
 			</div>
@@ -116,5 +113,7 @@
 	</div>
 </footer>
 <script src="bower_components/jquery/jquery.js"></script>
+<script src="bower_components/jquery-placeholder/jquery.placeholder.js"></script>
+<script src="js/main.js"></script>
 </body>
 </html>
