--- a/app/my_work.html
+++ b/app/my_work.html
@@ -3,17 +3,15 @@
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="viewport" content="width=1205">
 	<title>Мои работы</title>	
 	<meta name="description" content="Здесь представлены мои работы">
 	<meta name="keywords" content="Frontend разработчик">
-
-	<link rel="stylesheet" href="bower_components/normalize-css/normalize.css">
 	<link rel="stylesheet" href="css/stylesheet.css">
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="css/portfolio.css">
 	<link rel="icon" type="image/x-icon" href="images/icon.ico">
-
+	<script src="bower_components/modernizr/modernizr.js"></script>
 	<!--[if IE]>
     <link rel="stylesheet" href="css/forie.css">
     <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -35,22 +33,22 @@
 			</a>
 			<ul class="socials clearfix">
 				<li class="socials_item">
-					<a href="https://www.facebook.com/allarepossible" class="icon icon_fb" alt="" target="_blank">
+					<a href="https://www.facebook.com/allarepossible" class="icon icon_fb" alt="facebook" target="_blank">
 						facebook
 					</a>
 				</li>			
 				<li class="socials_item">
-					<a href="http://vk.com/id121191631" class="icon icon_vk" alt="" target="_blank">
+					<a href="http://vk.com/id121191631" class="icon icon_vk" alt="vkontakte" target="_blank">
 						vkontakte
 					</a>
 				</li>
 				<li class="socials_item">
-					<a href="#" class="icon icon_tw" alt="" target="_blank">
+					<a href="#" class="icon icon_tw" alt="twitter" target="_blank">
 						twitter
 					</a>
 				</li>
 				<li class="socials_item">
-					<a href="https://github.com/Allarepossible" class="icon icon_git" alt="" target="_blank">
+					<a href="https://github.com/Allarepossible" class="icon icon_git" alt="github" target="_blank">
 						github
 					</a>
 				</li>
@@ -77,21 +75,21 @@
 		</aside>
 		<div class="content_area clearfix">
 			<section class="information clearfix">
-				<div class="mainLine">Мои работы</div>
+				<div class="mainLine"><h1>Мои работы</h1></div>
 				<div class="projecs">
 					<ul class="project_list">
 						<li class="project">
-							<a href="http://lgweb.ru/" target="_blank"><div class="photo_project"><img src="images/lgweb.jpg" alt=""></div>
+							<a href="http://lgweb.ru/" target="_blank"><div class="photo_project"><img src="images/lgweb.jpg" alt="Lgweb.ru"></div>
 							<div class="name_project">lgweb.ru</div></a>
 							<div class="description_project">Личный сайт-портфолио от студии loftschool.</div>
 						</li>
 						<li class="project">
-							<a href="http://profcomff.ru/" target="_blank"><div class="photo_project"><img src="images/profcom.jpg" alt=""></div>
+							<a href="http://profcomff.ru/" target="_blank"><div class="photo_project"><img src="images/profcom.jpg" alt="profcomff.ru"></div>
 							<div class="name_project">profcomff.ru</div></a>
 							<div class="description_project">Сайт студенческого профкома физического факультета.</div>
 						</li>
 						<li class="project">
-							<a href="http://plasten.ru/" target="_blank"><div class="photo_project"><img src="images/plasten.jpg" alt=""></div>
+							<a href="http://plasten.ru/" target="_blank"><div class="photo_project"><img src="images/plasten.jpg" alt="plasten.ru"></div>
 							<div class="name_project">plasten.ru</div></a>
 							<div class="description_project">Сайт визитка компании Plasten по продаже термопласт-автоматов.</div>
 						</li>
@@ -109,7 +107,7 @@
 </div>
 <footer class="footer clearfix">
 	<div class="footer_container">
-		<a href="lk.html" alt="">
+		<a href="lk.html">
 			<div class="icon enter">
 				<span class="enter_text">Вход</span>
 			</div>
