popup in my_work.html

--- a/app/lk.html
+++ b/app/lk.html
@@ -28,7 +28,7 @@
 		<div class="auth">
 			<form action="#" method="get" class="form_auth">
 				<div class="inputs icon im_mail">
-					<input id="input_name icon" type="text" name="name" placeholder="Введите Email">
+					<input id="input_name" type="text" name="name" placeholder="Введите Email">
 				</div>
 				<div class="inputs icon im_pass">
 					<input id="input_email" type="text" name="email" placeholder="Введите пароль">
