--- a/app/my_work.html
+++ b/app/my_work.html
@@ -33,22 +33,22 @@
 			</a>
 			<ul class="socials clearfix">
 				<li class="socials_item">
-					<a href="https://www.facebook.com/allarepossible" class="icon icon_fb" alt="facebook" target="_blank">
+					<a href="https://www.facebook.com/allarepossible" class="icon icon_fb" target="_blank">
 						facebook
 					</a>
 				</li>			
 				<li class="socials_item">
-					<a href="http://vk.com/id121191631" class="icon icon_vk" alt="vkontakte" target="_blank">
+					<a href="http://vk.com/id121191631" class="icon icon_vk" target="_blank">
 						vkontakte
 					</a>
 				</li>
 				<li class="socials_item">
-					<a href="#" class="icon icon_tw" alt="twitter" target="_blank">
+					<a href="#" class="icon icon_tw" target="_blank">
 						twitter
 					</a>
 				</li>
 				<li class="socials_item">
-					<a href="https://github.com/Allarepossible" class="icon icon_git" alt="github" target="_blank">
+					<a href="https://github.com/Allarepossible" class="icon icon_git" target="_blank">
 						github
 					</a>
 				</li>
@@ -116,12 +116,12 @@
 						<input id="input_name_project" type="text" name="name_project" placeholder="Введите название">
 					<label for="img_project">Картинка проекта</label>
 					<div class="img_project icon">
-						<input id="img_project" type="img" name="img_project" placeholder="Загрузите изображение">
+						<input id="img_project" type="url" name="img_project" placeholder="Загрузите изображение">
 					</div>
 					<label for="url_project">URL проекта</label>
 						<input id="url_project" type="url" name="url_project" placeholder="Добавьте ссылку">
 					<div class="input_description"><label for="input_description">Описание</label>
-						<textarea id="input_descruption" name="description" cols="40" rows="6"   placeholder="Пара слов о вашем проекте" ></textarea>
+						<textarea id="input_description" name="description" cols="40" rows="6"   placeholder="Пара слов о вашем проекте" ></textarea>
 					</div>			
 						<button type="submit">Добавить</button>		
 				</form>
