--- a/app/index.html
+++ b/app/index.html
@@ -32,22 +32,22 @@
 			</a>
 			<ul class="socials clearfix">
 				<li class="socials_item">
-					<a href="https://www.facebook.com/allarepossible" class="icon icon_fb" alt="facebook" target="_blank">
+					<a href="https://www.facebook.com/allarepossible" class="icon icon_fb" target="_blank">
 						facebook
 					</a>
 				</li>			
 				<li class="socials_item">
-					<a href="http://vk.com/id121191631" class="icon icon_vk" alt="vkontakte" target="_blank">
+					<a href="http://vk.com/id121191631" class="icon icon_vk" target="_blank">
 						vkontakte
 					</a>
 				</li>
 				<li class="socials_item">
-					<a href="#" class="icon icon_tw" alt="twitter" target="_blank">
+					<a href="#" class="icon icon_tw" target="_blank">
 						twitter
 					</a>
 				</li>
 				<li class="socials_item">
-					<a href="https://github.com/Allarepossible" class="icon icon_git" alt="github" target="_blank">
+					<a href="https://github.com/Allarepossible" class="icon icon_git" target="_blank">
 						github
 					</a>
 				</li>
