--- a/app/my_work.html
+++ b/app/my_work.html
@@ -26,7 +26,7 @@
 	<header class="header clearfix">
 		<div class="header_container clearfix">
 			<a href="index.html" class="logo">
-				<img class="logo_img" src="images/logo.png" alt="lgweb">
+				<div class="logo_img"><img src="images/logo.png" alt="lgweb"></div>
 				<span class="logo_text">
 					Leisan Gilfanova начинающий front-end разработчик.
 				</span>
@@ -59,9 +59,9 @@
 		<aside class="sidebar clearfix">
 			<nav class="nav">
 				<ul>
-					<li class="navigation"><a href="/index.html">Обо мне</a></li>
-					<li class="navigation active"><a href="/my_work.html">Мои Работы</a></li>
-					<li class="navigation"><a href="/feedback.html">Обратная связь</a></li>
+					<li class="nav_list"><a href="/index.html" class="navigation">Обо мне</a></li>
+					<li class="nav_list"><a href="/my_work.html" class="navigation active">Мои Работы</a></li>
+					<li class="nav_list"><a href="/feedback.html" class="navigation">Обратная связь</a></li>
 				</ul>
 			</nav>
 			<div class="contacts clearfix">
@@ -75,7 +75,7 @@
 		</aside>
 		<div class="content_area clearfix">
 			<section class="information clearfix">
-				<div class="mainLine"><h1>Мои работы</h1></div>
+				<div class="main_line"><h1>Мои работы</h1></div>
 				<div class="projecs">
 					<ul class="project_list">
 						<li class="project">
