--- a/app/index.html
+++ b/app/index.html
@@ -25,7 +25,7 @@
 	<header class="header clearfix">
 		<div class="header_container">
 			<a href="index.html" class="logo">
-				<img class="logo_img" src="images/logo.png" alt="lgweb">
+				<div class="logo_img"><img src="images/logo.png" alt="lgweb"></div>
 				<span class="logo_text">
 					Leisan Gilfanova начинающий front-end разработчик.
 				</span>
@@ -56,11 +56,11 @@
 	</header>
 	<main class="content clearfix">
 		<aside class="sidebar clearfix">
-			<nav class="nav clearfix">
+			<nav class="nav">
 				<ul>
-					<li class="navigation active"><a href="/index.html">Обо мне</a></li>
-					<li class="navigation"><a href="/my_work.html">Мои Работы</a></li>
-					<li class="navigation"><a href="/feedback.html">Обратная связь</a></li>
+					<li class="nav_list"><a href="/index.html" class="navigation active">Обо мне</a></li>
+					<li class="nav_list"><a href="/my_work.html" class="navigation">Мои Работы</a></li>
+					<li class="nav_list"><a href="/feedback.html" class="navigation">Обратная связь</a></li>
 				</ul>
 			</nav>
 			<div class="contacts clearfix">
@@ -74,7 +74,7 @@
 		</aside>
 		<div class="content_area clearfix">
 			<section class="information clearfix">
-				<div class="mainLine"><h1>Основная информация</h1></div>
+				<div class="main_line"><h1>Основная информация</h1></div>
 				<div class="main_information">
 					<div class="photo">
 						<div class="inner_photo">
@@ -82,10 +82,10 @@
 						</div>
 					</div>
 					<div class="info">
-						<p><span class="bold">Меня зовут:</span> Гильфанова Лейсан</p>
-						<p><span class="bold">Мой возраст:</span> 22 года</p>
-						<p><span class="bold">Мой город:</span> Москва, Россия</span></p>
-						<p><span class="bold">Моя специализация:</span> FRONTEND разработчик</span></p>
+						<div class="info_name">Меня зовут:</div><div class="info_more"> Гильфанова Лейсан</div>
+						<div class="info_name">Мой возраст:</div><div class="info_more"> 22 года</div>
+						<div class="info_name">Мой город:</div><div class="info_more"> Москва, Россия</div>
+						<div class="info_name">Моя специализация:</div><div class="info_more"> FRONTEND разработчик</div>
 						<div class="navyki">Ключевые навыки:</div>
 						<ul class="skills">
 							<li class="skill icon">Html</li>						
@@ -101,50 +101,50 @@
 				</div>
 			</section>
 			<section class="information clearfix">	
-				<div class="mainLine pad clearfix"><h2>Опыт работы</h2></div>	
+				<div class="main_line"><h2>Опыт работы</h2></div>	
 				<div class="Education">
 					<ul>
 						<li class="org icon">
 						<i class="icon icon_work"></i>
 							<div class="work">
-								<span class="bold">Торговый дом "Ledrus" - контент менеджер</span><span class="Data">Ноябрь 2014 - настоящее время</span>
+								<span class="bold">Торговый дом "Ledrus" - контент менеджер</span><span class="data">Ноябрь 2014 - настоящее время</span>
 							</div>
 						</li>
 						<li class="org icon">
 						<i class="icon icon_work"></i>
 							<div class="work">
-								<span class="bold">"amoCRM" - project менеджер</span><span class="Data"> Июнь 2015 - Ноябрь 2015</span>
+								<span class="bold">"amoCRM" - project менеджер</span><span class="data"> Июнь 2015 - Ноябрь 2015</span>
 							</div>
 						</li>
 						<li class="org icon">
 						<i class="icon icon_work"></i>
 							<div class="work">		
-								<span class="bold">Веб-студия "Diaweb" - помощник дизайнера</span><span class="Data"> Январь 2016 - настроящее время</span>
+								<span class="bold">Веб-студия "Diaweb" - помощник дизайнера</span><span class="data"> Январь 2016 - настроящее время</span>
 							</div>
 						</li>
 					</ul>
 				</div>
 			</section>
 			<section class="information  clearfix">	
-				<div class="mainLine  clearfix"><h2>Образование</h2></div>
-				<div class="Education">	
+				<div class="main_line"><h2>Образование</h2></div>
+				<div class="education">	
 					<ul>
 						<li class="org icon">
 						<i class="icon icon_school"></i>
 							<div class="work">
-								<span class="bold">Полное среднее. Средняя общеобразовательная школа.</span><span class="Data">2000 - 2011</span>
+								<span class="bold">Полное среднее. Средняя общеобразовательная школа.</span><span class="data">2000 - 2011</span>
 							</div>
 						</li>
 						<li class="org icon">
 						<i class="icon icon_vus"></i>
 							<div class="work">	
-								<span class="bold">МГУ им. М. В. Ломоносова - физический факультет</span><span class="Data"> Сентябрь 2011 - по настоящее время</span>
+								<span class="bold">МГУ им. М. В. Ломоносова - физический факультет</span><span class="data"> Сентябрь 2011 - по настоящее время</span>
 							</div>
 						</li>
 						<li class="org icon">
 						<i class="icon icon_course"></i>
 							<div class="work">
-								<span class="bold">Курсы Loftschool.ru</span><span class="Data"> Январь 2016 - по настоящее время</span>
+								<span class="bold">Курсы Loftschool.ru</span><span class="data"> Январь 2016 - по настоящее время</span>
 							</div>
 						</li>
 					</ul>
