--- a/app/index.html
+++ b/app/index.html
@@ -102,7 +102,7 @@
 			</section>
 			<section class="information clearfix">	
 				<div class="main_line"><h2>Опыт работы</h2></div>	
-				<div class="Education">
+				<div class="education">
 					<ul>
 						<li class="org icon">
 						<i class="icon icon_work"></i>
