adaptiv for all devices

--- a/app/index.html
+++ b/app/index.html
@@ -84,21 +84,23 @@
 						</div>
 					</div>
 					<div class="info">
-						<div class="info_name">Меня зовут:</div><div class="info_more"> Гильфанова Лейсан</div>
-						<div class="info_name">Мой возраст:</div><div class="info_more"> 22 года</div>
-						<div class="info_name">Мой город:</div><div class="info_more"> Москва, Россия</div>
-						<div class="info_name">Моя специализация:</div><div class="info_more"> FRONTEND разработчик</div>
-						<div class="navyki">Ключевые навыки:</div>
+					<ul>
+						<li><div class="info_name">Меня зовут:</div><div class="info_more"> Гильфанова Лейсан</div></li>
+						<li><div class="info_name">Мой возраст:</div><div class="info_more"> 22 года</div></li>
+						<li><div class="info_name">Мой город:</div><div class="info_more"> Москва, Россия</div></li>
+						<li><div class="info_name">Моя специализация:</div><div class="info_more"> FRONTEND разработчик</div></li>
+						<li><div class="navyki">Ключевые навыки:</div>
 						<ul class="skills">
-							<li class="skill icon">Html</li>						
+							<li class="skill icon">Html</li>	
 							<li class="skill icon">Css</li>
 							<li class="skill icon">Javascript</li>
 							<li class="skill icon">Git</li>
-							<li class="skill icon">Gulp</li>							
+							<li class="skill icon">Gulp</li>	
+							<li class="skill icon">Angular</li>	
 							<li class="skill icon">Php</li>
-							<li class="skill icon">Angular</li>
 							<li class="skill icon">Xml</li>
-						</ul>							
+						</ul></li>
+					</ul>							
 					</div>
 				</div>
 			</section>
@@ -154,6 +156,30 @@
 			</section>			
 		</div>
 	</main>
+	<div class="soc2">			
+		<ul class="socials2 clearfix">
+			<li class="socials_item2">
+				<a href="https://www.facebook.com/allarepossible" class="icon_mob icon_mob_fb" target="_blank">
+					facebook
+				</a>
+			</li>			
+			<li class="socials_item2">
+				<a href="http://vk.com/id121191631" class="icon_mob icon_mob_vk" target="_blank">
+					vkontakte
+				</a>
+			</li>
+			<li class="socials_item2">
+				<a href="#" class="icon_mob icon_mob_tw" target="_blank">
+					twitter
+				</a>
+			</li>
+			<li class="socials_item2">
+				<a href="https://github.com/Allarepossible" class="icon_mob icon_mob_git" target="_blank">
+					github
+				</a>
+			</li>
+		</ul>
+	</div>
 	<div class="empty"></div>
 </div>
 <footer class="footer clearfix">
