--- a/app/feedback.html
+++ b/app/feedback.html
@@ -108,6 +108,30 @@
 			</section>
 		</div>
 	</main>
+	<div class="soc2">			
+		<ul class="socials2 clearfix">
+			<li class="socials_item2">
+				<a href="https://www.facebook.com/allarepossible" class="icon_mob icon_mob_fb" target="_blank">
+					facebook
+				</a>
+			</li>			
+			<li class="socials_item2">
+				<a href="http://vk.com/id121191631" class="icon_mob icon_mob_vk" target="_blank">
+					vkontakte
+				</a>
+			</li>
+			<li class="socials_item2">
+				<a href="#" class="icon_mob icon_mob_tw" target="_blank">
+					twitter
+				</a>
+			</li>
+			<li class="socials_item2">
+				<a href="https://github.com/Allarepossible" class="icon_mob icon_mob_git" target="_blank">
+					github
+				</a>
+			</li>
+		</ul>
+	</div>	
 	<div class="empty"></div>
 </div>
 <footer class="footer clearfix">
