--- a/app/my_work.html
+++ b/app/my_work.html
@@ -8,8 +8,8 @@
 	<meta name="description" content="Здесь представлены мои работы">
 	<meta name="keywords" content="Frontend разработчик">
 	<link rel="stylesheet" href="css/stylesheet.css">
-	<link rel="stylesheet" href="css/style.css">
-	<link rel="stylesheet" href="css/portfolio.css">
+	<link rel="stylesheet" href="css/style.css">	
+	<link rel="stylesheet" href="css/portfolio.css">	
 	<link rel="icon" type="image/x-icon" href="images/icon.ico">
 	<script src="bower_components/modernizr/modernizr.js"></script>
 	<!--[if IE]>
@@ -135,7 +135,30 @@
 			</section>			
 		</div>
 	</main>
-	
+	<div class="soc2">			
+		<ul class="socials2 clearfix">
+			<li class="socials_item2">
+				<a href="https://www.facebook.com/allarepossible" class="icon_mob icon_mob_fb" target="_blank">
+					facebook
+				</a>
+			</li>			
+			<li class="socials_item2">
+				<a href="http://vk.com/id121191631" class="icon_mob icon_mob_vk" target="_blank">
+					vkontakte
+				</a>
+			</li>
+			<li class="socials_item2">
+				<a href="#" class="icon_mob icon_mob_tw" target="_blank">
+					twitter
+				</a>
+			</li>
+			<li class="socials_item2">
+				<a href="https://github.com/Allarepossible" class="icon_mob icon_mob_git" target="_blank">
+					github
+				</a>
+			</li>
+		</ul>
+	</div>
 	<div class="empty clearfix"></div>
 </div>
 
@@ -147,9 +170,6 @@
 					<label for="input_name_project">Название проекта</label>
 						<input id="input_name_project" type="text" name="name_project" placeholder="Введите название">
 					<label for="upload_img">Картинка проекта</label>
-<!-- 					<div class="img_project icon">
-						<input id="img_project" type="file" name="img_project" placeholder="Загрузите изображение">
-					</div> -->
 					<label class="label_img" for="upload_img">
 						<span class="upload_text_img"  id="fileformlabel">Загрузите изображение</span>
 						<span class="upload_icon_img icon"></span>	
