--- a/app/feedback.html
+++ b/app/feedback.html
@@ -111,23 +111,19 @@
 	<div class="soc2">			
 		<ul class="socials2 clearfix">
 			<li class="socials_item2">
-				<a href="https://www.facebook.com/allarepossible" class="icon_mob icon_mob_fb" target="_blank">
-					facebook
+				<a href="https://www.facebook.com/allarepossible" class="icon icon_mob_fb" target="_blank">
 				</a>
 			</li>			
 			<li class="socials_item2">
-				<a href="http://vk.com/id121191631" class="icon_mob icon_mob_vk" target="_blank">
-					vkontakte
+				<a href="http://vk.com/id121191631" class="icon icon_mob_vk" target="_blank">
 				</a>
 			</li>
 			<li class="socials_item2">
-				<a href="#" class="icon_mob icon_mob_tw" target="_blank">
-					twitter
+				<a href="#" class="icon icon_mob_tw" target="_blank">
 				</a>
 			</li>
 			<li class="socials_item2">
-				<a href="https://github.com/Allarepossible" class="icon_mob icon_mob_git" target="_blank">
-					github
+				<a href="https://github.com/Allarepossible" class="icon icon_mob_git" target="_blank">
 				</a>
 			</li>
 		</ul>
