--- a/app/lk.html
+++ b/app/lk.html
@@ -28,10 +28,10 @@
 		<div class="auth">
 			<form action="#" method="get" class="form_auth">
 				<div class="inputs icon im_mail">
-					<input id="input_name" type="text" name="name" placeholder="Введите Email">
+					<input id="input_name" type="text" name="name" placeholder="Введите Email" class="im_mail_icon">
 				</div>
 				<div class="inputs icon im_pass">
-					<input id="input_email" type="text" name="email" placeholder="Введите пароль">
+					<input id="input_email" type="text" name="email" placeholder="Введите пароль" class="im_pass_icon">
 				</div>
 				<div class="checkbox_input">
 					<label>
@@ -59,5 +59,7 @@
 	</div>
 </footer>
 <script src="bower_components/jquery/jquery.js"></script>
+<script src="bower_components/jquery-placeholder/jquery.placeholder.js"></script>
+<script src="js/main.js"></script>
 </body>
 </html>
