page auth with checkbox + ie8

--- a/app/lk.html
+++ b/app/lk.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=1205">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Обо мне</title>	
 	<meta name="description" content="Личный кабинет">
 	<meta name="keywords" content="Frontend разработчик">
@@ -34,10 +34,8 @@
 					<input id="input_email" type="text" name="email" placeholder="Введите пароль" class="im_pass_icon">
 				</div>
 				<div class="checkbox_input">
-					<label>
-						<input type="checkbox" class="checkbox" id="checkbox"></input>
-						<span></span>
-					</label><div class="tch">Запомнить меня?</div>
+					<input type="checkbox" class="checkbox" id="checkbox" />
+				<label for="checkbox" class="icon">Запомнить меня?</label>
 				</div>								
 				<div class="buttons">
 					<button type="submit">Войти</button>		
