--- a/app/index.html
+++ b/app/index.html
@@ -31,7 +31,7 @@
 				</span>
 			</a>
 			<div class="nav_icon icon" id="pull"></div>
-			<ul class="socials clearfix">
+			<ul class="socials">
 				<li class="socials_item">
 					<a href="https://www.facebook.com/allarepossible" class="icon icon_fb" target="_blank">
 						facebook
@@ -156,26 +156,6 @@
 			</section>			
 		</div>
 	</main>
-	<div class="soc2">			
-		<ul class="socials2 clearfix">
-			<li class="socials_item2">
-				<a href="https://www.facebook.com/allarepossible" class="icon icon_mob_fb" target="_blank">
-				</a>
-			</li>			
-			<li class="socials_item2">
-				<a href="http://vk.com/id121191631" class="icon icon_mob_vk" target="_blank">
-				</a>
-			</li>
-			<li class="socials_item2">
-				<a href="#" class="icon icon_mob_tw" target="_blank">
-				</a>
-			</li>
-			<li class="socials_item2">
-				<a href="https://github.com/Allarepossible" class="icon icon_mob_git" target="_blank">
-				</a>
-			</li>
-		</ul>
-	</div>
 	<div class="empty"></div>
 </div>
 <footer class="footer clearfix">
