--- a/app/my_work.html
+++ b/app/my_work.html
@@ -135,26 +135,6 @@
 			</section>			
 		</div>
 	</main>
-	<div class="soc2">			
-		<ul class="socials2 clearfix">
-			<li class="socials_item2">
-				<a href="https://www.facebook.com/allarepossible" class="icon icon_mob_fb" target="_blank">
-				</a>
-			</li>			
-			<li class="socials_item2">
-				<a href="http://vk.com/id121191631" class="icon icon_mob_vk" target="_blank">
-				</a>
-			</li>
-			<li class="socials_item2">
-				<a href="#" class="icon icon_mob_tw" target="_blank">
-				</a>
-			</li>
-			<li class="socials_item2">
-				<a href="https://github.com/Allarepossible" class="icon icon_mob_git" target="_blank">
-				</a>
-			</li>
-		</ul>
-	</div>
 	<div class="empty clearfix"></div>
 </div>
 
@@ -163,20 +143,31 @@
    	<a href="javascript:PopUpHide()" class="hide_project icon"></a>
         <div class="add_project_form">
 			<form action="#" method="get" class="form">
-					<label for="input_name_project">Название проекта</label>
-						<input id="input_name_project" type="text" name="name_project" placeholder="Введите название">
+				<div class="input_group">
+					<div class="inputs1">
+						<label for="input_name_project">Название проекта</label>
+							<input id="input_name_project" type="text" name="name_project" placeholder="Введите название" class="for_input">
+					</div>	
+				</div>
+				<div class="input_group">						
 					<label for="upload_img">Картинка проекта</label>
 					<label class="label_img" for="upload_img">
 						<span class="upload_text_img"  id="fileformlabel">Загрузите изображение</span>
 						<span class="upload_icon_img icon"></span>	
 						<input class="upload_file" id="upload_img" type="file" name="img_project"  onchange="getName(this.value);">
 					</label>	
-
-					<label for="url_project">URL проекта</label>
-						<input id="url_project" type="url" name="url_project" placeholder="Добавьте ссылку">
+				</div>	
+				<div class="input_group">
+					<div class="inputs2">
+						<label for="url_project">URL проекта</label>
+							<input id="url_project" type="text" name="url_project" placeholder="Добавьте ссылку"  class="for_input">
+					</div>
+				</div>	
+				<div class="input_group">
 					<div class="input_description"><label for="input_description">Описание</label>
-						<textarea id="input_description" name="description" cols="40" rows="6"   placeholder="Пара слов о вашем проекте" ></textarea>
-					</div>			
+						<textarea id="input_description" name="description" cols="40" rows="6"   placeholder="Пара слов о вашем проекте"  class="for_input"></textarea>
+					</div>
+				</div>				
 						<button type="submit">Добавить</button>		
 				</form>
 			</div>
